Change link for banner image to use Dropbox

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -49,3 +49,11 @@ body {
     margin: 0px;
   }
 }
+
+.jumbotron {
+  background-image: url('https://dl.dropboxusercontent.com/s/nkdb8m0dw6stwqh/jumbotron.jpg?dl=0');
+  color: white;
+  h1, h2 {
+    font-family: guardian-egyptt, georgia, serif;
+  }
+}
